Add additional config

--- a/socketcluster/docker-compose.yml
+++ b/socketcluster/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     environment:
       - SCC_STATE_SERVER_HOST=scc-state
       - SCC_BROKER_SERVER_PORT=8888
+      - SOCKETCLUSTER_WORKERS=2
+      - SOCKETCLUSTER_BROKERS=2
   scc-broker2:
     image: scc-broker
     ports:
@@ -18,6 +20,8 @@ services:
     environment:
       - SCC_STATE_SERVER_HOST=scc-state
       - SCC_BROKER_SERVER_PORT=9999
+      - SOCKETCLUSTER_WORKERS=2
+      - SOCKETCLUSTER_BROKERS=2
   test-app1:
     image: test-app
     ports:
@@ -25,6 +29,8 @@ services:
     environment:
       - SCC_STATE_SERVER_HOST=scc-state
       - SOCKETCLUSTER_PORT=8000
+      - SOCKETCLUSTER_WORKERS=2
+      - SOCKETCLUSTER_BROKERS=2
   test-app2:
     image: test-app
     ports:
@@ -32,6 +38,8 @@ services:
     environment:
       - SCC_STATE_SERVER_HOST=scc-state
       - SOCKETCLUSTER_PORT=8001
+      - SOCKETCLUSTER_WORKERS=2
+      - SOCKETCLUSTER_BROKERS=2
   portainer:
     image: "portainer/portainer:1.20.2"
     ports:
